# Scorpius-Enterprise-2.0

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT_SUMMARY.md  DOCKER_SETUP.md  Makefile  README.md  SECURITY.md  all-tests.ps1  docker-compose-fixed.yml  docker-compose-new.yml  docker-compose-simple.yml  docker-compose-working.yml  docker-compose.yml  package.json  startup-scorpius.ps1  startup-scorpius.sh  stop-scorpius.ps1  verify-platform.ps1
backend/: .env.example  .gitignore  README.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml  pytest.ini
backend/ai-forensics-service/: README.md
backend/ai-forensics-service/app/: Dockerfile  __init__.py  app.py  requirements.txt
backend/api-gateway/: .env.example  Dockerfile  README.md  docker-compose.yml  enterprise_gateway.py  requirements.txt  sdk_endpoints.py
backend/api-gateway/app/: main.py
backend/auth_proxy/: Dockerfile
backend/bridge-service/: README.md
backend/bytecode-service/: README.md
backend/config-orchestrator/: orchestrator.py  requirements.txt
backend/dashboard/: list-gets.js  package.json
backend/dashboard/app/: layout.tsx  page.tsx  providers.tsx
backend/dashboard/components/: endpoint-tester.tsx  service-explorer.tsx  sidebar.tsx
backend/dashboard/scripts/: generate-navigation.js
backend/decorators/: quantum mempool.code-workspace
backend/exploit-testing-service/: README.md
backend/exploit-testing-service/app/: .gitignore  Dockerfile  __init__.py  app.py  requirements.txt
backend/extras/: advanced_exploit_suite.lnk
backend/extras/exploit suit/: advanced_exploit_suite.lnk
backend/frontend/: README.md
backend/frontend/etc/: hostname  hosts  shadow
backend/honeypot-service/: README.md
backend/integration-hub/: README.md
backend/integration-hub/app/: Dockerfile  __init__.py  app.py  plugin_marketplace.py  requirements.txt
backend/mempool-service/: README.md
backend/mempool-service/app/: requirements.txt
backend/mev-bot-service/: README.md
backend/mev-bot-service/app/: Dockerfile  bindings.py  chain_registry.py  config.py  cross_chain_executor.py  defender_integration.py  elite_mev_bot.py  flashloan_executor.py  gas_optimizer.py  mev_api_server.py  mev_config.py  mev_config.yaml  mev_detector.py  mev_engine.py  mev_protection.py  mev_router.py  mev_strategies.py  mevbot.py  reinforcement_learning.py  requirements.txt  test_mev_bot.py
backend/mev-protection-service/: README.md
backend/mev-protection-service/app/: Dockerfile  __init__.py  app.py  requirements.txt
backend/monitoring/: prometheus.yml
backend/quantum mempool/: DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.ultimate  ENTERPRISE_INTEGRATION_COMPLETE.md  INTEGRATION_COMPLETE.md  README-ULTIMATE-SCANNER.md  README.md  deploy-ultimate-scanner.ps1  deploy-ultimate.ps1  deploy-ultimate.sh  deploy.sh  init_database.py  main.py  main_backup.py  requirements-clean.txt  requirements.txt  test_enterprise_integration.py  test_enterprise_simple.py  test_integration.py  test_simple.py  test_sqlalchemy_clean.py  test_sqlalchemy_integration.py  test_unified_system.py  ultimate_unified_integration.py  unified_integration.py  unified_quantum_mempool.py
backend/quantum mempool/.github/: copilot-instructions.md
backend/quantum mempool/config/: unified-config.yaml
backend/quantum mempool/scripts/: run-quantum-monitor.ps1  start-container.ps1
backend/quantum scanner/: .env.example  Dockerfile  ENHANCEMENT_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  README.md  comprehensive_demo.py  demo.py  demo_cbom_report.json  deploy.bat  deploy.sh  docker-compose-standalone.yml  docker-compose.yml  full_platform_demo.py  pyproject.toml  requirements.txt  start_server.py  test_api.py  test_working_endpoints.py
backend/quantum scanner/.github/: copilot-instructions.md
backend/quantum scanner/integration/: requirements.txt  scorpius_client.py  scorpius_example.py  test_integration.py
backend/quantum scanner/monitoring/: prometheus-standalone.yml  prometheus.yml
backend/quantum scanner/nginx/: nginx-standalone.conf  nginx.conf
backend/quantum scanner/scripts/: init-postgres.sql
backend/quantum scanner/tests/: conftest.py  test_ai_threat_predictor.py  test_attack_simulator.py  test_cbom_engine.py  test_quantum_agility_tester.py  test_threat_intelligence.py
backend/quantum-crypto-service/: README.md
backend/quantum-crypto-service/app/: Dockerfile  __init__.py  app.py  requirements.txt
backend/quantum-service/: README.md
backend/reporting-service/: README.md
backend/sandbox/: __init__.py  docker_plugin_manager.py  pyproject.toml
backend/scanner-ai-orchestrator/: README.md
backend/scanner-ai-orchestrator/etc/: group  gshadow  hostname  hosts  ld.so.cache  machine-id  passwd  passwd-  shadow  shadow-  subuid
backend/scanner-ai-orchestrator/root/: .wget-hsts
backend/scanner-manticore/: README.md
backend/scanner-mythril/: README.md
backend/scanner-mythril/etc/: group  gshadow-  hostname  ld.so.cache  machine-id  passwd
backend/scanner-slither/: README.md
backend/scanner-slither/etc/: group  gshadow  hostname  hosts  ld.so.cache  machine-id  passwd  shadow  shadow-  subuid
backend/scanner-slither/root/: .wget-hsts
backend/sdk/ai-forensics-service/: api.ts  endpoints.ts  index.ts  package.json
backend/sdk/api-gateway/: api.ts  endpoints.ts  index.ts  package.json
backend/sdk/bridge-service/: api.ts  endpoints.ts  index.ts  package.json
backend/sdk/bytecode-service/: api.ts  endpoints.ts  index.ts  package.json
backend/sdk/exploit-testing-service/: api.ts  endpoints.ts  index.ts  package.json
backend/sdk/honeypot-service/: api.ts  endpoints.ts  index.ts  package.json
backend/sdk/integration-hub/: api.ts  endpoints.ts  index.ts  package.json
backend/sdk/mempool-service/: api.ts  endpoints.ts  index.ts  package.json
backend/settings-service/: README.md
backend/simulation-service/: README.md
backend/time-machine-service/: README.md
backend/wallet-guard-service/: README.md
frontend/backend/: Dockerfile  init.sql  pyproject.toml
(+1524 files in other folders)
