[project]
name = "scorpius-backend-heavy"
version = "0.0.0"
description = "Editable backend for heavy test-suite"
authors = [{name="Scorpius"}]
requires-python = ">=3.10"
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["."]                    # grab every folder
exclude = ["frontend", "tests*"] # but ignore stray non-python bits
